# beatrice

./: Cargo.toml
beatrice-client/: Cargo.toml
beatrice-client/src/: configuration.rs  lib.rs
beatrice-client/src/shell/: command.rs  mod.rs  parser.rs  prompter.rs
beatrice-proto/: Cargo.toml  build.rs
beatrice-proto/proto/: beatrice.proto
beatrice-proto/src/: lib.rs
beatrice-server/: Cargo.toml
beatrice-server/src/: configuration.rs  lib.rs
beatrice-server/src/collections/: mod.rs  skip_list.rs
beatrice-server/src/collections/bloom_filter/: mod.rs
beatrice-server/src/collections/bloom_filter/hash/: km.rs  mod.rs
beatrice-server/src/model/: key.rs  mod.rs  value.rs
beatrice-server/src/store/: compacter.rs  mod.rs  persistent.rs  stat.rs  volatile.rs
beatrice-server/src/store/sstable/: data.rs  filter.rs  index.rs  mod.rs
